Endpoints to messages, chat and users
