# swagger_output.json
@@ -16,8 +16,8 @@
     "apiKeyAuth": {
       "type": "apiKey",
       "in": "header",
-      "name": "X-API-KEY",
-      "description": "any description..."
+      "name": "Authorization",
+      "description": "Auth Token"
     }
   },
   "consumes": [
@@ -27,10 +27,147 @@
     "application/json"
   ],
   "paths": {
-    "/api/users": {
+    "/auth/login": {
+      "post": {
+        "tags": [
+          "Login"
+        ],
+        "description": "Endpoint to login as a user",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "description": "Login information.",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "email": {
+                  "type": "string",
+                  "example": "jhondoe@gmail.com"
+                },
+                "password": {
+                  "type": "string",
+                  "example": "encryptedPassword"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "schema": {
+              "type": "object",
+              "properties": {
+                "auth": {
+                  "type": "boolean",
+                  "example": true
+                },
+                "token": {
+                  "type": "string",
+                  "example": "string"
+                },
+                "user": {
+                  "$ref": "#/definitions/User"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            },
+            "description": "Login realizado com sucesso."
+          },
+          "400": {
+            "schema": {
+              "$ref": "#/definitions/Errors"
+            },
+            "description": "Invalid params"
+          },
+          "404": {
+            "schema": {
+              "$ref": "#/definitions/Errors"
+            },
+            "description": "User not found"
+          },
+          "422": {
+            "description": "DataBase Error"
+          }
+        }
+      }
+    },
+    "/auth/signup": {
+      "post": {
+        "tags": [
+          "Login"
+        ],
+        "description": "Endpoint to create a Login",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "description": "SignUp information.",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "type": "string",
+                  "example": "Jhon Doe"
+                },
+                "email": {
+                  "type": "string",
+                  "example": "jhondoe@gmail.com"
+                },
+                "password": {
+                  "type": "string",
+                  "example": "encryptedPassword"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "schema": {
+              "type": "object",
+              "properties": {
+                "auth": {
+                  "type": "boolean",
+                  "example": true
+                },
+                "token": {
+                  "type": "string",
+                  "example": "string"
+                },
+                "user": {
+                  "$ref": "#/definitions/User"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            },
+            "description": "Login realizado com sucesso."
+          },
+          "404": {
+            "schema": {
+              "$ref": "#/definitions/Errors"
+            },
+            "description": "Error on decode token"
+          }
+        }
+      }
+    },
+    "/api/room": {
       "get": {
         "tags": [
-          "User"
+          "Room"
         ],
         "description": "Endpoint to get all users",
         "produces": [
@@ -40,7 +177,7 @@
           {
             "name": "limit",
             "in": "query",
-            "description": "Quantity of users. (default is 10)",
+            "description": "Quantity of users. (default is 50)",
             "type": "string"
           },
           {
@@ -50,11 +187,41 @@
             "type": "string"
           }
         ],
-        "responses": {}
+        "responses": {
+          "200": {
+            "schema": {
+              "$ref": "#/definitions/Rooms"
+            },
+            "description": "Room updated successfully."
+          },
+          "400": {
+            "schema": {
+              "$ref": "#/definitions/Errors"
+            },
+            "description": "Invalid params"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "schema": {
+              "$ref": "#/definitions/Errors"
+            },
+            "description": "Room not found"
+          },
+          "422": {
+            "description": "DataBase Error"
+          }
+        },
+        "security": [
+          {
+            "apiKeyAuth": []
+          }
+        ]
       },
       "post": {
         "tags": [
-          "User"
+          "Room"
         ],
         "description": "Endpoint to create a user",
         "produces": [
@@ -64,7 +231,7 @@
           {
             "name": "body",
             "in": "body",
-            "description": "User information.",
+            "description": "Room information.",
             "required": true,
             "schema": {
               "type": "object",
@@ -90,7 +257,32 @@
             }
           }
         ],
-        "responses": {},
+        "responses": {
+          "200": {
+            "schema": {
+              "$ref": "#/definitions/Room"
+            },
+            "description": "Room created successfully."
+          },
+          "400": {
+            "schema": {
+              "$ref": "#/definitions/Errors"
+            },
+            "description": "Invalid params"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "schema": {
+              "$ref": "#/definitions/Errors"
+            },
+            "description": "Room not found"
+          },
+          "422": {
+            "description": "DataBase Error"
+          }
+        },
         "security": [
           {
             "apiKeyAuth": []
@@ -99,7 +291,7 @@
       },
       "put": {
         "tags": [
-          "User"
+          "Room"
         ],
         "description": "Endpoint to change a user information",
         "produces": [
@@ -109,7 +301,7 @@
           {
             "name": "body",
             "in": "body",
-            "description": "User information.",
+            "description": "Room information.",
             "schema": {
               "type": "object",
               "properties": {
@@ -136,13 +328,9 @@
         "responses": {
           "200": {
             "schema": {
-              "type": "string",
-              "example": "string",
-              "xml": {
-                "name": "main"
-              }
+              "$ref": "#/definitions/Room"
             },
-            "description": "User updated successfully."
+            "description": "Get rooms was successfull."
           },
           "400": {
             "schema": {
@@ -150,27 +338,35 @@
             },
             "description": "Invalid params"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "404": {
             "schema": {
               "$ref": "#/definitions/Errors"
             },
-            "description": "User not found"
+            "description": "Room not found"
           },
           "422": {
             "description": "DataBase Error"
           }
-        }
+        },
+        "security": [
+          {
+            "apiKeyAuth": []
+          }
+        ]
       },
       "delete": {
         "tags": [
-          "User"
+          "Room"
         ],
         "description": "Endpoint to delete a user",
         "parameters": [
           {
             "name": "id",
             "in": "query",
-            "description": "User id.",
+            "description": "Room id.",
             "type": "integer",
             "required": true
           }
@@ -184,7 +380,7 @@
                 "name": "main"
               }
             },
-            "description": "User deleted successfully."
+            "description": "Room deleted successfully."
           },
           "400": {
             "schema": {
@@ -192,33 +388,133 @@
             },
             "description": "Invalid params"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "404": {
             "schema": {
               "$ref": "#/definitions/Errors"
             },
-            "description": "User not found"
+            "description": "Room not found"
           },
           "422": {
             "description": "DataBase Error"
           }
-        }
+        },
+        "security": [
+          {
+            "apiKeyAuth": []
+          }
+        ]
+      }
+    },
+    "/api/Message": {
+      "get": {
+        "tags": [
+          "Message"
+        ],
+        "description": "Endpoint to get all users",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "limit",
+            "in": "query",
+            "description": "Quantity of users. (default is 50)",
+            "type": "string"
+          },
+          {
+            "name": "offset",
+            "in": "query",
+            "description": "Start before x users. (default is 0)",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "schema": {
+              "$ref": "#/definitions/Messages"
+            },
+            "description": "Get messages was successfull."
+          },
+          "400": {
+            "schema": {
+              "$ref": "#/definitions/Errors"
+            },
+            "description": "Invalid params"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "schema": {
+              "$ref": "#/definitions/Errors"
+            },
+            "description": "Message not found"
+          },
+          "422": {
+            "description": "DataBase Error"
+          }
+        },
+        "security": [
+          {
+            "apiKeyAuth": []
+          }
+        ]
+      },
+      "post": {
+        "tags": [
+          "Message"
+        ],
+        "description": "Endpoint to create a user",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "description": "Message information.",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "type": "string",
+                  "example": "Jhon Doe"
+                },
+                "email": {
+                  "type": "string",
+                  "example": "jhondoe@gmail.com"
+                },
+                "password": {
+                  "type": "string",
+                  "example": "encryptedPassword"
+                }
+              },
+              "required": [
+                "name",
+                "email",
+                "password"
+              ]
+            }
+          }
+        ],
+        "responses": {
+          "401": {
+            "description": "Unauthorized"
+          }
+        },
+        "security": [
+          {
+            "apiKeyAuth": []
+          }
+        ]
       }
     }
   },
   "definitions": {
-    "User": {
-      "type": "object",
-      "properties": {
-        "name": {
-          "type": "string",
-          "example": "Jhon Doe"
-        },
-        "email": {
-          "type": "string",
-          "example": "jhondoe@gmail.com"
-        }
-      }
-    },
     "Errors": {
       "type": "object",
       "properties": {
@@ -235,6 +531,89 @@
             }
           }
         }
+      }
+    },
+    "User": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "number",
+          "example": 1
+        },
+        "name": {
+          "type": "string",
+          "example": "Joe doe"
+        },
+        "email": {
+          "type": "string",
+          "example": "teste@email.com"
+        },
+        "createdAt": {
+          "type": "string",
+          "example": "2021-03-23T16:58:30.000Z"
+        }
+      }
+    },
+    "Room": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "number",
+          "example": 1
+        },
+        "name": {
+          "type": "string",
+          "example": "Joe doe"
+        },
+        "description": {
+          "type": "string",
+          "example": "Descricao da sala"
+        },
+        "owner_id": {
+          "type": "number",
+          "example": 1
+        },
+        "user_to_id": {
+          "type": "number",
+          "example": 2
+        },
+        "createdAt": {
+          "type": "string",
+          "example": "2021-03-23T16:58:30.000Z"
+        }
+      }
+    },
+    "Rooms": {
+      "type": "array",
+      "items": {
+        "$ref": "#/definitions/Room"
+      }
+    },
+    "Message": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "number",
+          "example": 1
+        },
+        "name": {
+          "type": "string",
+          "example": "Joe doe"
+        },
+        "email": {
+          "type": "string",
+          "example": "teste@email.com"
+        },
+        "createdAt": {
+          "type": "string",
+          "example": "2021-03-23T16:58:30.000Z"
+        }
+      }
+    },
+    "Messages": {
+      "type": "array",
+      "items": {
+        "$ref": "#/definitions/Message"
       }
     }
   }
